--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_pdfview: ^1.0.0+7
+  flutter_plugin_pdf_viewer: any
   path_provider: ^1.1.2
+  dio: any
 
 dev_dependencies:
   flutter_test:
@@ -41,7 +42,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
